# tac

./: .aider.chat.history.md  .aider.input.history  .gitignore  Create a new test file with the following contents  LICENSE  README.md  agent.py  block.py  config.yaml  executor.py  main.py  my_module.py  poc.py  pyproject.toml  pytest.ini  requirements.txt  test_code.py  test_heading_logger.py  test_main.py  test_protoblock.py
File: tests/: test_project_ignore_paths.py
File:** `tests/: test_tac_make_command_exclamation.py
File:** tests/: dummy_immediate_test.py  test_immediate_verbose.py
New File: tests/: test_protoblock_serialization.py
docs/: whitepaper.md
examples/: caesar_cipher.yaml  laplace_filter.yaml  performance_with_fake_git.py  python_file_tree.yaml
src/: test_logging.py
src/tac/: communication.py  prompt_injector.py
src/tac/agents/: aider_agent.py  base.py  native_agent.py
src/tac/blocks/: __init__.py  builder.py  executor.py  generator.py  model.py  orchestrator.py  processor.py
src/tac/cli/: gather.py  main.py  viewer.py  voice.py
src/tac/coding_agents/: __init__.py  aider.py  base.py  constructor.py  native_agent.py
src/tac/core/: block.py  block_runner.py  config.py  error_analyzer.py  executor.py  git_manager.py  llm.py  log_config.py  optimizer.py  orchestrator.py  plausibility_check.py  test_runner.py
src/tac/protoblock/: __init__.py  factory.py  manager.py  model.py  protoblock.py  protoblock_io.py
src/tac/testing_agents/: optimizing.py  performance.py  plausibility.py  pytest.py
src/tac/trusty_agents/: __init__.py  base.py  performance.py  pexpect.py  pexpect_agent.py  plausibility.py  pytest.py  registry.py  threejs.py  threejs_unit_test.py  threejs_vision.py  threejs_vision_before_after.py  threejs_vision_reference.py  vision.py
src/tac/utils/: audio.py  code_extractor.py  diff_stats.py  file_gatherer.py  file_summarizer.py  file_utils.py  filesystem.py  git_manager.py  image_stitcher.py  log_manager.py  project_files.py  random_string.py  status_update.py  ui.py  web_utils.py
src/tac/web/: __init__.py  client.html  comms.py  file_badges.js  index.css  index.html  server.py  settings.py  ui.py  ui_components.py  websocket_server.py
src/web/: threejs_hello_world.html  ui_launcher.py
tdac/core/: git_manager.py
tests/: protoblock_factory.py  setup.py  test_ai_typing_animation.py  test_aider_agent_command.py  test_aider_agent_real_time_output.py  test_amplitude_streaming.py  test_block_button.py  test_block_executor.py  test_block_processor.py  test_chat_agent.py  test_cli_generate_removed.py  test_cli_git_removed.py  test_cli_test_default.py  test_cli_update_yaml.py  test_code_extractor.py  test_coding_agent_constructor.py  test_config_defaults.py  test_config_manager.py  test_config_override.py  test_diff_stats.py  test_error_analyzer.py  test_executor_git_branch.py  test_fake_git_manager.py  test_file_gatherer.py  test_file_summarizer.py  test_filesystem_cleanup.py  test_git_manager.py  test_heading_logger.py  test_image_stitcher.py  test_immediate_verbose.py  test_llm_code_fence_cleaning.py  test_llm_failure.py  test_llm_image_downscale.py  test_llm_reasoning_effort.py  test_llm_success.py  test_load_config.py  test_log_color.py  test_log_config.py  test_log_file_writing.py  test_logging.py  (+56 more)
(+60 files in other folders)
