[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tac"
version = "0.1.6"
description = "Trusty Agentic Chains: An Automated, Trust-validated AI Coding Framework "
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
dependencies = [
    "pytest>=8.3.4",
    "pytest-benchmark>=4.0.0",
    "pytest-snapshot>=0.9.0",
    "line_profiler>=4.1.0",
    "numpy>=1.24.0",
    "GitPython>=3.1.40",
    "tqdm>=4.66.0",
    "PyYAML>=6.0.1",
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "typer>=0.15.2",
    "loguru>=0.7.0",
    "playwright>=1.41.0",
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "snapshottest>=0.6.0",
]

[project.scripts]
tac = "tac.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tac"]

[tool.setuptools]
packages = ["src/tac"]

[tool.hatch.metadata]
allow-direct-references = true
